--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Animate.cssの使用例</title>
-<link rel="stylesheet" href="http://s.mlcdn.co/animate.css">
+<link rel="stylesheet" href="https://s.mlcdn.co/animate.css">
 <style>
 /**
  * デモ用のスタイル
